--- a/package.json
+++ b/package.json
@@ -9,15 +9,37 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.27.0",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@mantine/core": "^8.3.2",
+    "@mantine/dates": "^8.3.2",
+    "@mantine/dropzone": "^8.3.2",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-charts": "^8.12.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@tanstack/react-query": "^5.90.2",
+    "antd": "^5.27.4",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
+    "framer-motion": "^12.23.22",
+    "jotai": "^2.15.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.2.1",
     "swr": "^2.3.6",
     "victory": "^37.3.6",
